<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#1CCE28"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/tvSeparador"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/bCrearPic"
            android:background="#000000"
            android:gravity="center_vertical"
            android:text="@string/espacio" />

        <Button
            android:id="@+id/bCrearPic"
            android:layout_width="34dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/custom_crearpic"
            android:paddingBottom="24dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/bInicio"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="32"
            android:background="@drawable/custom"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/tab_inicio"
            android:textColor="#FFFFFF" />
        
        <TextView
            android:id="@+id/tvSeparador2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#000000"
            android:gravity="center_vertical"
            android:text="" />

        <Button
            android:id="@+id/bPizarra"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="32"
            android:background="@drawable/custom"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/tab_pizarra"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvSeparador3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#000000"
            android:gravity="center_vertical"
            android:text="" />

        <Button
            android:id="@+id/bLibros"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="32"
            android:background="@drawable/custom"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/tab_libros"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <Gallery
        android:id="@+id/horizontallistview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spacing="10dp" />

    <ListView
        android:id="@+id/lvBooks"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#D3E8A3"
        android:divider="#D3E8A3"
        android:dividerHeight="1dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="10dp" />

</LinearLayout>