<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#D3E8A3"
    android:orientation="vertical"
    android:paddingBottom="10dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="2.5dp"
        android:background="@drawable/custom_shape"
        android:paddingLeft="2dp"
        android:paddingRight="2dp" >

        <ImageView
            android:id="@+id/ivProfileBooks"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imagen_perfil"
            android:paddingLeft="2.5dp"
            android:paddingRight="2.5dp"
            android:paddingTop="2.5dp" />

        <TextView
            android:id="@+id/tvNameBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivProfileBooks"
            android:paddingTop="2.5dp"
            android:text="@string/name"
            android:textColor="#1CCE28"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tvIdGroupBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvNameBooks"
            android:layout_toRightOf="@+id/tvNameBooks"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvIdPostBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvNameBooks"
            android:layout_toRightOf="@+id/tvIdGroupBook"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvGroupBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvNameBooks"
            android:layout_alignParentRight="true"
            android:paddingRight="2.5dp"
            android:text="@string/group"
            android:textColor="#BDBDBD"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tvTitleBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProfileBooks"
            android:paddingLeft="10dp"
            android:paddingTop="2.5dp"
            android:text="@string/class_date"
            android:textColor="#000000"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tvAuthorBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleBooks"
            android:paddingLeft="10dp"
            android:text="@string/class_date"
            android:textColor="#000000"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tvPublisherBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAuthorBooks"
            android:paddingLeft="10dp"
            android:text="@string/class_date"
            android:textColor="#000000"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tvAditionalInfoBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPublisherBooks"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:textSize="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvDateBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNameBooks"
            android:layout_toRightOf="@+id/ivProfileBooks"
            android:text="@string/date"
            android:textColor="#BDBDBD"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tvIdBooksGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvNameBooks"
            android:layout_alignParentTop="true"
            android:text=""
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvContactInfoBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAditionalInfoBooks"
            android:paddingLeft="10dp"
            android:text="@string/class_date"
            android:textColor="#000000"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tvOfferTypeBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvContactInfoBooks"
            android:paddingLeft="10dp"
            android:text="@string/class_date"
            android:textColor="#000000"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tvPriceBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOfferTypeBooks"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:text="@string/class_date"
            android:textColor="#000000"
            android:textSize="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvSingleURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvIdBooksGroup"
            android:layout_alignLeft="@+id/tvIdBooksGroup"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="2.5dp"
        android:background="#BBD768" >

        <TextView
            android:id="@+id/tvComentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tvReplyCountBooks"
            android:padding="2dp"
            android:text="@string/comentarios"
            android:textColor="#5BBF21"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tvReplyCountBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvComentarios"
            android:layout_alignParentRight="true"
            android:padding="2dp"
            android:textColor="#FFFFFF"
            android:textSize="9dp" />
    </RelativeLayout>

</LinearLayout>